<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center_horizontal"
    android:weightSum="2"
    android:background="@color/llAddEditFragmentBackground"
    tools:layout="@layout/activity_main"
    tools:context=".AddEditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="4dp"
        android:orientation="vertical"
        android:gravity="bottom|center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvAddEditFragmentName"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/tvAddEditFragmentNameTextColor"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/etAddEditFragmentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etNameHint"
            android:textSize="22sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvAddEditFragmentUrl"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/tvAddEditFragmentUrlTextColor"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/etAddEditFragmentUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etUrlHint"
            android:textSize="22sp"
            android:inputType="textUri"
            tools:text="@string/exampleUrl"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:weightSum="3">

            <Button
                android:id="@+id/btAddEditFragmentCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="4dp"
                android:text="@string/btCancelText"
                android:textColor="@color/btTextColor"
                android:backgroundTint="@color/btBackgroundTint"/>

            <Button
                android:id="@+id/btAddEditFragmentConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="4dp"
                android:text="@string/btConfirmText"
                android:textColor="@color/btTextColor"
                android:backgroundTint="@color/btBackgroundTint"/>

        </LinearLayout>




    </LinearLayout>

</LinearLayout>