<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout="@layout/item_bookmark">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tvConfirmDeleteRequest"
        android:textColor="@color/tvItemNameTextColor"
        android:textSize="22sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:weightSum="3">

        <Button
            android:id="@+id/btDeleteCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="4dp"
            android:text="@string/btCancelText"
            android:textColor="@color/btTextColor"
            android:backgroundTint="@color/btDeleteCancelBackgroundTint"/>

        <Button
            android:id="@+id/btDeleteConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="4dp"
            android:text="@string/btConfirmText"
            android:textColor="@color/btTextColor"
            android:backgroundTint="@color/btBackgroundTint"/>

    </LinearLayout>

</LinearLayout>