<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cvItemBookmark"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="9dp"
    app:cardElevation="9dp"
    app:cardBackgroundColor="@color/cvItemBackgroundColor"
    tools:layout="@id/rvWebBookmarks">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/tvItemName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:padding="4dp"
                android:lines="2"
                android:maxLines="2"
                android:textSize="22sp"
                android:textColor="@color/tvItemNameTextColor"
                tools:text="@string/tvItemNameExample"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/ibItemDelete"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/delete_button"
                    android:scaleType="centerCrop"/>

                <ImageButton
                    android:id="@+id/ibItemEdit"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintTop_toBottomOf="@id/ibItemDelete"
                    android:src="@drawable/edit_button"
                    android:scaleType="centerInside"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvItemRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="0dp"
                android:lines="1"
                android:maxLines="1"
                android:gravity="start|center_vertical"
                android:textSize="14sp"
                android:textAlignment="gravity"
                tools:text="@string/exampleNumber"/>

            <TextView
                android:id="@+id/tvItemUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="4dp"
                android:gravity="start|center_vertical"
                android:lines="1"
                android:maxLines="1"
                android:textSize="14sp"
                android:textAlignment="gravity"
                tools:text="@string/exampleUrl"/>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>